--- a/vezbe-01/zad_02/index.html
+++ b/vezbe-01/zad_02/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Nikola Tesla</h1>
         <hr>
-        <img src="C:\Users\dejan\Desktop\web-dizajn\vezbe-01\zad_02\tesla.jpg" width="300" alt="Nikola Tesla u 37. godini života">
+        <img src="\vezbe-01\zad_02\tesla.jpg" width="300" alt="Nikola Tesla u 37. godini života">
         <p>
             <strong>Nikola Tesla</strong><i>(1856 — 1943)</i> bio je srpski i američki pronalazač<sup>[1]</sup>, inženjer
                     elektrotehnike i mašinstva i futurista, najpoznatiji po svom doprinosu u projektovanju modernog sistema
