--- a/vezbe-01/zad_02/index.html
+++ b/vezbe-01/zad_02/index.html
@@ -74,10 +74,10 @@
             22 časa i 30 minuta. I pored prodaje patenata u oblasti naizmeničnih struja, Tesla umire siromašan i u dugovima.
             Tim povodom, gradonačelnik Njujorka Lagvardija je rekao:
         </p>
-        <quote>Nikola Tesla je umro. Umro je siromašan, 
+        <cite>Nikola Tesla je umro. Umro je siromašan, 
            ali je bio jedan od najkorisnijih ljudi koji su ikada živeli. Ono što je stvorio veliko je i, kako vreme prolazi,
            postaje još veće.
-        </quote>
+        </cite>
         <p>
             Posmrtni obred je održan 12. januara u Crkvi Svetog Jovana Bogoslova na 
             Menhetnu u Njujorku. Posle službe telo je kremirano. Ispraćaju Teslinih posmrtnih ostataka prisustvovalo je oko 
